--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h1>Software Engineer</h1>
             <div id="homePageContent">
                 <p>
-                Based out of Halifax, NS. Specializing in custom WordPress 
-                theme development. If you are a business seeking a web 
-                presence or an employer looking to hire, you can get in 
-                touch with me here.</p>
+                Born in Hong Kong and based out of New York. Specializing in web development and communications. 
+                If you are a business seeking a web presence or an employer looking to hire, please
+                contact me <a href="contact.html" id="contactLink">here.</a>
+            </p>
             </div>            
         </div>
     </div>
