--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
-<body class="body3">
+<body>
     <header class="header">
         <div class="info">
             <div><h3>SZEWAHCHIN</h3></div>
