--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Front Page</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
-<body class="body1">
+<body>
     <div class="mainPage">
         <header class="header">
             <div class="info">
