--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
-<body class="body2">
+<body>
      <header class="header">
         <div class="info">
             <div class="name"><h3>SZEWAHCHIN</h3></div>
